	function selects the new home for their code.


NEW FEATURES

    o	file.edit() function added:  like file.show(), but allows editing.
	
    o	edit() and fix() use the object name in the window caption on 
	some platforms.


UTILITIES




C-LEVEL FACILITIES




DEPRECATED & DEFUNCT

    o	La.eigen(), tetragamma(), pentagamma(), package.contents() and
	package.description() are defunct.



INSTALLATION CHANGES




BUG FIXES

	

	
	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1


NEW FEATURES

    o	as.Date() now has a method for "POSIXlt" objects.

    o	mean() has a method for "difftime" objects and so summary() works.


BUG FIXES

    o	pbinom(q, N, prob) is now more accurate when prob is close to 0
	(PR#6757).

    o	pcauchy(x, .., log.p) is now more accurate for large x,
	particularly when log.p = TRUE	(PR#6756).

    o	pgeom(q, prob, lower.tail, log.p) is now (sometimes much) more
	accurate when prob is very small (PR#6792).

    o	makeARIMA() was not handling an ARMA(0, 0) model correctly.

    o	as.Date() was failing on factors.  (PR#6779)

    o	min(), max() and range() were failing on "difftime" objects.

    o	as.data.frame.list() could fail on some unusual list names.
	(PR#6782)

    o	type.convert() ignored na.strings when no conversion was done.
	(PR#6781, not needed for its primary use in read.table.)

    o	src/modules/X11/dataentry.c would not build on some XFree
	4.4.0 systems.  (This is a bug in their header files but we have
	added a workaround.)

    o   Fixed the clipping problem in the quartz device.

    o   Subsetting a factor swapped the order of the attributes, which
	identical() cares about.  (PR#6799)

    o   The L-BFGS-B option of optim() apparently needs part of its 
	workspace zeroed.  (PR#6720)

    o   extractAIC.survreg needed updating.
