@@ -9,7 +9,7 @@ export("?", CRAN.packages, Rprof, apropos, assignInNamespace,
        help.search, help.start, history, install.packages,
        installed.packages, limitedLabels, loadhistory, ls.str,
        lsf.str, make.packages.html, make.socket, menu, methods,
-       newestVersion, object.size, old.packages, package.contents,
+       object.size, old.packages, package.contents,
        package.skeleton, packageStatus, page, pico, prompt,
        promptData, read.fwf, read.socket, recover, remove.packages,
        savehistory, shQuote, str, summaryRprof, tail, topicName,
